Fri Apr 20 11:44:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_1330_Regression

Fri Apr 20 11:35:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Base.inl:
          Added ACE_HAS_BSWAP_16, ACE_HAS_BSWAP_32, and ACE_HAS_BSWAP_64.
          When one of the defines is set, we include os_byteswap.h and
          then use bswap_16, bswap_32, and bswap_64.

        * ace/config-linux-common.h:
          Added ACE_HAS_BYTESWAP_H, ACE_HAS_BSWAP_16, ACE_HAS_BSWAP_32, and
          ACE_HAS_BSWAP_64. This fixes bugzilla bug 2901.

Fri Apr 20 08:29:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
          Updated to also run automatic regression tests with VxWorks 6.x
          in kernel mode.

Thu Apr 19 18:24:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_byteswap.h:
          New wrapper file for byteswap.h

Thu Apr 19 16:47:46 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          Use the -boost option for TAO/tests/Sequence_Unit_Tests when Config
          BOOST is present.

Thu Apr 19 14:25:39 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_time.h (ace_timezone): Changed ACE_HAS_WIN32 to
          ACE_WIN32 to fix a bug on Windows. Thanks to Jan Kalin <jan dot
          kalin at zag dot si> for this fix.

Thu Apr 19 14:10:18 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-doxygen.h: Turn on ACE_Dev_Poll_Reactor doc generation
          using ACE_HAS_DEV_POLL instead of ACE_HAS_EVENT_POLL. The latter
          will be automatatically turned off on systems w/o epoll and the
          docs get lost.

Thu Apr 19 13:59:06 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Obstack_T.cpp:

          Because the ACE_ALLOCATOR macro contains a return, head_ and curr_