@@ -65,7 +65,8 @@
 #define ACE_LACKS_STRPTIME
 
 #if !defined (ACE_HAS_WINCE)
-#  define ACE_HAS_INTRIN_H
+# define ACE_HAS_INTRIN_H
+# define ACE_HAS_INTRINSIC_INTERLOCKED
 #endif
 
 #define ACE_LACKS_STATIC_DATA_MEMBER_TEMPLATES
