@@ -131,10 +131,6 @@
 #define ACE_LACKS_TERMIOS_H
 #define ACE_LACKS_REGEX_H
 
-#if !defined (ACE_HAS_WINCE)
-# define ACE_HAS_INTRINSIC_INTERLOCKED
-#endif
-
 #define ACE_INT64_FORMAT_SPECIFIER ACE_LIB_TEXT ("%I64d")
 #define ACE_UINT64_FORMAT_SPECIFIER ACE_LIB_TEXT ("%I64u")
 
